# public/swagger.json
@@ -43,7 +43,10 @@
 						"type": "boolean"
 					},
 					"cost": {
-						"$ref": "#/components/schemas/CostType"
+						"items": {
+							"$ref": "#/components/schemas/CostType"
+						},
+						"type": "array"
 					},
 					"cusine_types": {
 						"items": {
