# src/api/restaurant/dto/restaurant-filter.dto.ts
@@ -2,7 +2,7 @@ import { CostType } from "../../../enums/cost-type.enum";
 
 export class RestaurantFiltersDto {
     veg_only: boolean
-    cost: CostType
+    cost: Array<CostType>
     cusine_types: Array<string>
     isOpen: boolean
 }
